--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Jayashree | UI developer</title>
 </head>
 <body>
-   <h1>My First Page</h1> 
+   <header>
+    <div class="h1 text-white text-center mt-4">Hello! I am JAYASHREE</div>
+   </header>
 </body>
 </html>
