--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../src/styles/index.css">
     
 </head>
 <body>
-   <header>
-    <div class="h1 text-white text-center mt-4">Hello! I am JAYASHREE</div>
-   </header>
+    <div class="shade">
+       <header class="pt-4">
+          <div class=" h1 text-center text-white mt-4">Hello! I am JAYASHREE</div>
+          <div class="h4 text-center text-white mt-2">UI Full Stack Developer</div>
+       </header>
+       <main style="height:300px;" class="d-flex justify-content-center align-items-center">
+            <div class="text-center">
+                <h2 class="text-white">My Projects</h2>
+                <a class="btn btn-warning">Shopper Template</a>
+                <a class="btn btn-warning">Fresh Cart Template</a>
+                <a class="btn btn-warning">EMI Calculator</a>
+                <div class="mt-4">
+                    <a class="btn btn-light">Download My Resume</a>
+                </div>
+            </div>
+       </main>
+   </div>
 </body>
 </html>
