add shopper template and styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <main style="height:300px;" class="d-flex justify-content-center align-items-center">
             <div class="text-center">
                 <h2 class="text-white">My Projects</h2>
-                <a class="btn btn-warning">Shopper Template</a>
+                <a class="btn btn-warning" href="./public/shopper.html">Shopper Template</a>
                 <a class="btn btn-warning">Fresh Cart Template</a>
                 <a class="btn btn-warning">EMI Calculator</a>
                 <div class="mt-4">
