--- a/public/shopper.html
+++ b/public/shopper.html
@@ -36,5 +36,19 @@
             <span class="bi bi-lightning-fill"></span> HAPPY HOLIDAY DEALS ON EVERYTHING <span class="bi bi-lightning-fill"></span>
         </div>
     </article>
+    <section>
+        <div class="woman">
+            <span class="text-white fs-1 fw-bold"> Women </span>
+            <span> Shop Women <span class="bi bi-arrow-right"></span> </span>
+        </div>
+        <div class="man">
+            <span  class="text-white fs-1 fw-bold"> Men </span>
+            <span> Shop men <span class="bi bi-arrow-right"></span></span>
+        </div>
+        <div class="kid">
+            <span  class="text-white fs-1 fw-bold"> Kid </span>
+            <span> Shop kid <span class="bi bi-arrow-right"></span></span>
+        </div>
+    </section>
 </body>
 </html>
