add coffee shop path in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="text-center">
                 <h2 class="text-white">My Projects</h2>
                 <a class="btn btn-warning" href="./public/shopper.html">Shopper Template</a>
-                <a class="btn btn-warning">Fresh Cart Template</a>
+                <a class="btn btn-warning" href="https://jayashree-katore.github.io/jayashree-portfolio/">Coffee Shop Template</a>
                 <a class="btn btn-warning">EMI Calculator</a>
                 <div class="mt-4">
                     <a class="btn btn-light">Download My Resume</a>
