add footer in shopper.html

--- a/public/shopper.html
+++ b/public/shopper.html
@@ -39,16 +39,72 @@
     <section>
         <div class="woman">
             <span class="text-white fs-1 fw-bold "> Women </span>
-            <span> Shop Women <span class="bi bi-arrow-right"></span> </span>
+            <span class="shop-all"> Shop Women 
+                <span class="bi bi-arrow-right"></span> 
+            </span>
         </div>
         <div class="man">
             <span  class="text-white fs-1 fw-bold"> Men </span>
-            <span> Shop men <span class="bi bi-arrow-right"></span></span>
+            <span class="shop-all"> Shop men 
+                <span class="bi bi-arrow-right"></span>
+            </span>
         </div>
         <div class="kid">
             <span  class="text-white fs-1 fw-bold"> Kid </span>
-            <span> Shop kid <span class="bi bi-arrow-right"></span></span>
+            <span class="shop-all"> Shop kid
+                 <span class="bi bi-arrow-right"></span>
+                </span>
         </div>
     </section>
+    <footer>
+        <div class="footer-title">
+            <span>Want Style ideas and trends?</span>
+        </div>
+         <div class="subscribe">
+            <span class="email">Enter Email*</span>
+            <span class="btn-subscribe">Subscribe</span>
+         </div>
+        <div class="services">
+            <div>
+                <div class="footer-brand-title"><span>Shopper.</span></div>
+                <aside>
+                <span class="bi bi-facebook"></span>
+                <span class="bi bi-twitter"></span>
+                <span class="bi bi-instagram"></span>
+                <span class="bi bi-linkedin"></span>
+                <span class="bi bi-youtube"></span>
+                </aside>
+             </div>
+         <div>
+            <span class="service-title">SUPPORT</span>
+            <span>Contact Us</span>
+            <span>FAQs</span>
+            <span>Size Guide</span>   
+            <span> Shipping & Returns</span>
+         </div>
+         <div>
+            <span class="service-title">SHOP</span>
+            <span>Men's Shopping</span>
+            <span>Women's Shopping</span>
+            <span>Kids' Shopping</span>
+            <span>Discounts</span>
+         </div>
+         <div>
+            <span class="service-title">COMPANY</span>
+            <span>Our Story</span>
+            <span>Careers</span>
+            <span>Terms & Conditions</span>
+            <span>Privacy & Cookie policy</span>
+         </div>
+         <div>
+            <span class="service-title">CONTACT</span>
+            <address>
+              <span> 1-202-555-0105</span>
+              <span>1-202-555-0106</span>
+              <span>help@shopper.com</span>
+            </address>
+         </div>
+         </div>
+    </footer>
 </body>
 </html>
