--- a/public/shopper.html
+++ b/public/shopper.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopper Template</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../src/styles/shopperstyle.css">
 </head>
+
 <body class="container-fluid">
     <header>
         <div class="fw-bold fs-2">
@@ -33,78 +38,80 @@
     </header>
     <article>
         <div class="bg-dark text-white text-center p-1 fs-6">
-            <span class="bi bi-lightning-fill"></span> HAPPY HOLIDAY DEALS ON EVERYTHING <span class="bi bi-lightning-fill"></span>
+            <span class="bi bi-lightning-fill"></span> HAPPY HOLIDAY DEALS ON EVERYTHING <span
+                class="bi bi-lightning-fill"></span>
         </div>
     </article>
     <section>
         <div class="woman">
             <span class="text-white fs-1 fw-bold "> Women </span>
-            <span class="shop-all"> Shop Women 
-                <span class="bi bi-arrow-right"></span> 
+            <span class="shop-all"> Shop Women
+                <span class="bi bi-arrow-right"></span>
             </span>
         </div>
         <div class="man">
-            <span  class="text-white fs-1 fw-bold"> Men </span>
-            <span class="shop-all"> Shop men 
+            <span class="text-white fs-1 fw-bold"> Men </span>
+            <span class="shop-all"> Shop men
                 <span class="bi bi-arrow-right"></span>
             </span>
         </div>
         <div class="kid">
-            <span  class="text-white fs-1 fw-bold"> Kid </span>
+            <span class="text-white fs-1 fw-bold"> Kid </span>
             <span class="shop-all"> Shop kid
-                 <span class="bi bi-arrow-right"></span>
-                </span>
+                <span class="bi bi-arrow-right"></span>
+            </span>
         </div>
     </section>
     <footer>
         <div class="footer-title">
             <span>Want Style ideas and trends?</span>
         </div>
-         <div class="subscribe">
-            <span class="email">Enter Email*</span>
-            <span class="btn-subscribe">Subscribe</span>
-         </div>
+        <div class="subscribe">
+            <span class="email"><input type="text" placeholder="Enter Email*" style="background-color: rgb(60, 51, 51); height: 50px; width: 300px;"></span>
+            <span class="btn-subscribe"><input type="button" value="Subscribe" style="background-color:  rgb(60, 51, 51); height: 50px; width:100px"></span>
+        </div>
         <div class="services">
             <div>
                 <div class="footer-brand-title"><span>Shopper.</span></div>
                 <aside>
-                <span class="bi bi-facebook"></span>
-                <span class="bi bi-twitter"></span>
-                <span class="bi bi-instagram"></span>
-                <span class="bi bi-linkedin"></span>
-                <span class="bi bi-youtube"></span>
+                    <span class="bi bi-facebook"></span>
+                    <span class="bi bi-twitter"></span>
+                    <span class="bi bi-instagram"></span>
+                    <span class="bi bi-linkedin"></span>
+                    <span class="bi bi-youtube"></span>
                 </aside>
-             </div>
-         <div>
-            <span class="service-title">SUPPORT</span>
-            <span>Contact Us</span>
-            <span>FAQs</span>
-            <span>Size Guide</span>   
-            <span> Shipping & Returns</span>
-         </div>
-         <div>
-            <span class="service-title">SHOP</span>
-            <span>Men's Shopping</span>
-            <span>Women's Shopping</span>
-            <span>Kids' Shopping</span>
-            <span>Discounts</span>
-         </div>
-         <div>
-            <span class="service-title">COMPANY</span>
-            <span>Our Story</span>
-            <span>Careers</span>
-            <span>Terms & Conditions</span>
-            <span>Privacy & Cookie policy</span>
-         </div>
-         <div>
-            <span class="service-title">CONTACT</span>
-            <address>
-              <span> 1-202-555-0105</span>
-              <span>1-202-555-0106</span>
-              <span>help@shopper.com</span>
-            </address>
-         </div>
-         </div>
+            </div>
+            <div>
+                <span class="service-title">SUPPORT</span>
+                <span>Contact Us</span>
+                <span>FAQs</span>
+                <span>Size Guide</span>
+                <span> Shipping & Returns</span>
+            </div>
+            <div>
+                <span class="service-title">SHOP</span>
+                <span>Men's Shopping</span>
+                <span>Women's Shopping</span>
+                <span>Kids' Shopping</span>
+                <span>Discounts</span>
+            </div>
+            <div>
+                <span class="service-title">COMPANY</span>
+                <span>Our Story</span>
+                <span>Careers</span>
+                <span>Terms & Conditions</span>
+                <span>Privacy & Cookie policy</span>
+            </div>
+            <div>
+                <span class="service-title">CONTACT</span>
+                <address>
+                    <span> 1-202-555-0105</span>
+                    <span>1-202-555-0106</span>
+                    <span>help@shopper.com</span>
+                </address>
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
