--- a/public/shopper.html
+++ b/public/shopper.html
@@ -62,6 +62,70 @@
             </span>
         </div>
     </section>
+    <!-- shipping section -->
+        <div class="shipping-section">
+            <div>
+                 <span class="fw-bold d-flex">
+                    <span class="bi bi-truck text-danger"></span>&nbsp;&nbsp;&nbsp;
+                    Free Shipping
+                 </span>
+                 <span class="ms-4">
+                    &nbsp; From all orders over $100
+                 </span>
+            </div>
+            <div>
+                <span class="fw-bold d-flex">
+                    <span class="bi bi-arrow-left-right text-danger"></span>&nbsp;&nbsp;&nbsp;
+                    Free Returns
+                </span>
+                <span class="ms-4">
+                    &nbsp; Return money within 30 days
+                </span>
+            </div>
+            <div>
+                <span class="fw-bold d-flex">
+                    <span class="bi bi-lock text-danger"></span>&nbsp;&nbsp;&nbsp;
+                    Secure Shopping
+                </span>
+                <span class="ms-4">
+                    &nbsp; you are in safe hand
+                </span>
+            </div>
+            <div>
+                <span class="fw-bold d-flex">
+                    <span class="bi bi-tag text-danger"></span>&nbsp;&nbsp;&nbsp;
+                    Over 10,000 Styles
+                </span>
+                <span class="ms-4">
+                    &nbsp; We have Everything you need
+                </span>
+            </div>
+        </div>  
+
+        <!-- New Collection -->
+        <div class="p-5 text-center">
+            <div class="p-1">
+                <span class="text-secondary">NEW COLLECTION</span>
+            </div>
+            <div class="p-1">
+                <span class="fw-bold fs-1">Best Picks 2024</span>
+        </div>
+            <div>
+                <span class="text-secondary-emphasis">
+                    Appear, dry there darkness they're seas, dry waters thing fly midst. Beast, above fly brought Very green.
+                </span>
+            </div>
+        </div>
+        <!-- photos link-->
+        <div class="row d-flex justify-content-center mb-5">
+            <div class="bag col-4">
+                <img src="../public/images/bag.jpg" height="100%" width="70%">
+            </div>
+            <div class="men-shirt col-3">
+                <img src="../public/images/shirt-printed.jpg" height="100%" width="150%">
+            </div>
+        </div>
+
     <footer>
         <div class="footer-title">
             <span>Want Style ideas and trends?</span>
