--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2 class="text-white">My Projects</h2>
                 <a class="btn btn-warning" href="./public/shopper.html">Shopper Template</a>
                 <a class="btn btn-warning" href="https://coffee-cafe-project.web.app">Coffee Shop Template</a>
-                <a class="btn btn-warning">EMI Calculator</a>
+                <a class="btn btn-warning" href="./public/BMI-calculator.html">BMI Calculator</a>
                 <div class="mt-4">
                     <a class="btn btn-light">Download My Resume</a>
                 </div>
