update bmi calculator

--- a/public/BMI-calculator.html
+++ b/public/BMI-calculator.html
@@ -39,7 +39,7 @@
 
             if(bmi_status <= 18)
             {
-                document.getElementById("lblStatus").innerHTML = "Your Weight is : <b> " + " UnderWeight ".fontcolor('red') + "</b>";
+                document.getElementById("lblStatus").innerHTML = "Your Weight is : <b> " + " UnderWeight ".fontcolor('yellow') + "</b>";
             }
             else if(bmi_status > 18 && bmi_status <= 25)
             {
