--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        </header>
        <main style="height:300px;" class="d-flex justify-content-center align-items-center">
             <div class="text-center">
-                <h2 class="text-white">My Projects</h2>
+                <h2 class="text-white">project Projects</h2>
                 <a class="btn btn-warning" href="./public/shopper.html">Shopper Template</a>
                 <a class="btn btn-warning" href="https://coffee-cafe-project.web.app">Coffee Shop Template</a>
                 <a class="btn btn-warning" href="./public/BMI-calculator.html">BMI Calculator</a>
