--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a class="btn btn-warning" href="./public/shopper.html">Shopper Template</a>
                 <a class="btn btn-warning" href="https://coffee-cafe-project.web.app">Coffee Shop Template</a>
                 <a class="btn btn-warning" href="./public/BMI-calculator.html">BMI Calculator</a>
+                <a class="btn btn-warning" href="./public/myPrograms.html">My Programs</a>
                 <div class="mt-4">
                     <a class="btn btn-light">Download My Resume</a>
                 </div>
