update color-panela ,add touch screen event example

--- a/public/myPrograms.html
+++ b/public/myPrograms.html
@@ -6,6 +6,7 @@
     <title>My Programs</title>
 </head>
 <body>
-    <a href="colorPanel.html">On mouse Over change color of images</a>
+    <a href="colorPanel.html">On mouse Over change color of images</a><br>
+    <a href="touchstart.html">Touch screen Event</a>
 </body>
 </html>
