--- a/public/colorPanel.html
+++ b/public/colorPanel.html
@@ -1,73 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mouse Over Event Example</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
-        #red {
+        #red{
             background-color: red;
         }
-
-        #green {
+        #green{
             background-color: green;
         }
-
-        #pink {
+        #pink{
             background-color: pink;
         }
-
-        #blue {
+        #blue{
             background-color: blue;
         }
-
-        #uimg {
-            background-color: red;
+       
+        .color {
+            width: 80px;
+            height: 80px;
+            border: 3px solid black;
+            cursor: pointer;
         }
+        #red:hover{
+            border: 5px solid black;
+        } 
     </style>
     <script>
-        function changeColor(obj) {
+        function changeColor(obj){
             var color = obj.id;
             var imgs = document.getElementById("changeimg");
-            if (color == "red") {
+            if(color == "red")
+            {
                 imgs.src = "../public/images/red_frock.jpg";
             }
-            else if (color == "green") {
+            else if(color == "green")
+            {
                 imgs.src = "../public/images/green_frock.jpg";
             }
-            else if (color == "pink") {
+            else if(color == "pink")
+            {
                 imgs.src = "../public/images/pink-frock.jpg";
             }
-            else if (color == "blue") {
+            else if(color == "blue")
+            {
                 imgs.src = "../public/images/blue_frock.jpg";
             }
-            else {
-                imgs.src = "../public/images/frock.jpg";
+            else
+            {
+                imgs.src = "../public/images/frock.png";
             }
-
+            
+        }
+        function whitecolor()
+        {
+           document.getElementById("changeimg").src = "../public/images/frock.png";
         }
     </script>
 </head>
-
 <body>
-    <div class="row border border-dark m-5 w-50" id="row">
-        <div class="col-3 border border-black text-white" id="red" onmouseover="changeColor(this)">
-            Red
+    <div class="row m-5" id="row">
+        <div class="color col-3 border border-black text-white" id="red" onmouseover="changeColor(this)" onmouseout="whitecolor()">
         </div>
-        <div class="col-3 border border-black text-white" id="green" onmouseover="changeColor(this)">
-            Green
+        <div class="color col-3 border border-black text-white" id="green" onmouseover="changeColor(this)" onmouseout="whitecolor()">
         </div>
-        <div class="col-3 border border-black text-white" id="pink" onmouseover="changeColor(this)">
-            pink
+        <div class="color col-3 border border-black text-white" id="pink" onmouseover="changeColor(this)" onmouseout="whitecolor()">
         </div>
-        <div class="col-3 border border-black text-white" id="blue" onmouseover="changeColor(this)">
-            Blue
+        <div class="color col-3 border border-black text-white" id="blue" onmouseover="changeColor(this)" onmouseout="whitecolor()">
         </div>
     </div>
     <div class="m-5">
@@ -75,5 +79,4 @@
     </div>
 
 </body>
-
 </html>
