--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <a class="btn btn-warning" href="./public/myPrograms.html">My Programs</a>
                 <div class="mt-4">
                     <a class="btn btn-light">Download My Resume</a>
-                </div>
-                <h3>Thanks for visiting!</h3>
+                </div>  
             </div>
+            <h3 class="text-white">Thanks for visiting!</h3>
        </main>
    </div>  
 </body>
