--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <a class="btn btn-warning" href="./public/BMI-calculator.html">BMI Calculator</a>
                 <a class="btn btn-warning" href="./public/myPrograms.html">My Programs</a>
                 <div class="mt-4">
-                    <a class="btn btn-light">Download My Resume</a>
+                    <a class="btn btn-light">Download My Resume</a><br><br>
+                    <h3 class="text-white">Thanks for visiting!</h3>
                 </div>  
             </div>
-            <h3 class="text-white">Thanks for visiting!</h3>
        </main>
    </div>  
 </body>
